--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -24,6 +24,16 @@
             android:layout_marginBottom="12dp" />
 
         <TextView
+            android:id="@+id/tvServicePrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Service Price"
+            android:textSize="16sp"
+            android:textColor="#FF4081"
+            android:layout_marginBottom="12dp"/>
+
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Select Date"
