--- a/app/src/main/res/layout/fragment_booking_history.xml
+++ b/app/src/main/res/layout/fragment_booking_history.xml
@@ -16,6 +16,15 @@
         android:textColor="@android:color/darker_gray"
         android:layout_marginTop="40dp" />
 
+    <Button
+        android:id="@+id/btnShareBooking"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Share Latest Booking via Email"
+        android:textColor="@android:color/white"
+        android:backgroundTint="#2196F3"
+        android:layout_marginBottom="12dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBookings"
         android:layout_width="match_parent"
